fixed news nav on mobile

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -285,7 +285,7 @@ section{
 
     h3{
       font-weight: normal;
-      padding: 0 0 10px;
+      padding: 10px 0 10px;
       text-transform: uppercase;
       letter-spacing: 1px;
       margin-top: 0;
